# license-normaliser

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.rst  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.rst  conftest.py  pyproject.toml
.agents/skills/update-documentation/: SKILL.md
docs/: full_llms.rst  llms.rst  requirements.txt
scripts/: README.rst  add_aliases_variations.py  apply_aliases_patch.py  check_missing_aliases.py  compare_datasets.py  compare_scancode_categories.py  documentation_validator.py  find_alias_duplicates.py  migrate_prose_to_aliases.py  migrate_publishers_to_aliases.py  migrate_url_map_to_aliases.py  sort_aliases.py  test_name_inference.py
src/licence_normaliser/: __init__.py  _cache.py  _core.py  _models.py  _normaliser.py  _trace.py  defaults.py  exceptions.py  plugins.py
src/licence_normaliser/cli/: _main.py
src/licence_normaliser/data/: README.rst
src/licence_normaliser/data/aliases/: aliases.json
src/licence_normaliser/data/creativecommons/: creativecommons.json
src/licence_normaliser/data/prose/: prose_patterns.json
src/licence_normaliser/parsers/: alias.py  creativecommons.py  opendefinition.py  osi.py  prose.py  publisher.py  scancode_licensedb.py  spdx.py
src/licence_normaliser/tests/: test_alias_expansion.py  test_aliases.py  test_cache.py  test_cli.py  test_core.py  test_exceptions.py  test_integration.py  test_models.py  test_prose.py  test_publisher.py  test_trace.py
src/license_normaliser/: __init__.py  _cache.py  _core.py  _enums.py  _exceptions.py  _models.py  _normaliser.py  _pipeline.py  _registry.py  _trace.py  defaults.py  exceptions.py  plugins.py
src/license_normaliser/cli/: __init__.py  _main.py
src/license_normaliser/data/: README.md  README.rst  normalize_licenses.py  spdx-licenses.json
src/license_normaliser/data/aliases/: aliases.json
src/license_normaliser/data/creativecommons/: creativecommons.json
src/license_normaliser/data/opendefinition/: opendefinition_.json  opendefinition_licenses_all.json
src/license_normaliser/data/osi/: osi.json
src/license_normaliser/data/prose/: prose_patterns.json
src/license_normaliser/data/publishers/: publishers.json
src/license_normaliser/data/scancode_licensedb/: scancode_licensedb.json
src/license_normaliser/data/spdx/: spdx-licenses.json  spdx-licenses_.json
src/license_normaliser/data/urls/: url_map.json
src/license_normaliser/data_sources/: __init__.py  builtin_aliases.py  builtin_prose.py  builtin_urls.py  opendefinition.py  spdx.py
src/license_normaliser/parsers/: __init__.py  alias.py  base.py  creativecommons.py  opendefinition.py  osi.py  prose.py  publisher.py  scancode_licensedb.py  spdx.py
src/license_normaliser/tests/: conftest.py  test_alias_expansion.py  test_aliases.py  test_cache.py  test_cli.py  test_core.py  test_data_sources.py  test_exceptions.py  test_integration.py  test_models.py  test_pipeline.py  test_prose.py  test_publisher.py  test_registry.py
