[project]
name = "license-normaliser"
description = "Comprehensive license normalisation with a three-level hierarchy."
readme = "README.rst"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com" }]
maintainers = [{ name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["license", "normalisation", "spdx", "creative commons", "open source"]

[project.scripts]
license-normaliser = "license_normaliser.cli:main"

[project.urls]
Homepage = "https://github.com/barseghyanartur/license-normaliser/"
Repository = "https://github.com/barseghyanartur/license-normaliser/"
Issues = "https://github.com/barseghyanartur/license-normaliser/issues"

[project.optional-dependencies]
all = ["license-normaliser[dev,test,docs,build]"]
dev = [
    "detect-secrets",
    "doc8",
    "ipython",
    "mypy",
    "ruff",
    "uv",
    "httpx",
]
test = ["pytest", "pytest-cov", "pytest-codeblock"]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-no-pragma",
    "sphinx-markdown-builder",
    "sphinx-llms-txt-link",
    "sphinx-source-tree",
]
build = ["build", "twine", "wheel"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["license_normaliser", "license_normaliser.*"]

[tool.setuptools.package-data]
"license_normaliser" = ["data/**/*.json"]

[build-system]
requires = ["setuptools>=41.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
lint.select = ["B", "C4", "E", "F", "G", "I", "ISC", "INP", "N", "PERF", "Q", "SIM"]
lint.ignore = ["G004", "ISC003"]
fix = true
src = ["src/license_normaliser"]
target-version = "py310"

[tool.ruff.lint.isort]
known-first-party = ["license_normaliser"]

[tool.pytest.ini_options]
addopts = ["-ra", "-vvv", "-q", "--cov=license_normaliser", "--cov-report=html", "--cov-report=term"]
testpaths = ["src/license_normaliser/tests", "."]
pythonpath = ["src"]

[tool.coverage.run]
source = ["license_normaliser"]
