[project]
name = "licence-normaliser"
description = "Robust licence normalisation with a three-level hierarchy for common licences."
readme = "README.rst"
version = "0.5.1"
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com" },
]
maintainers = [
    { name = "Artur Barseghyan", email = "artur.barseghyan@gmail.com" },
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "license",
    "normalisation",
    "spdx",
    "creative commons",
    "open source",
]

[project.scripts]
licence-normaliser = "licence_normaliser.cli:main"
documentation-validator = "scripts.documentation_validator:main"

[project.urls]
Homepage = "https://github.com/barseghyanartur/licence-normaliser/"
Repository = "https://github.com/barseghyanartur/licence-normaliser/"
Issues = "https://github.com/barseghyanartur/licence-normaliser/issues"

[project.optional-dependencies]
all = ["licence-normaliser[dev,test,docs,build]"]
dev = [
    "detect-secrets",
    "doc8",
    "ipython",
    "mypy",
    "ruff",
    "uv",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-codeblock",
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-no-pragma",
    "sphinx-markdown-builder",
    "sphinx-llms-txt-link",
    "sphinx-source-tree",
]
build = [
    "build",
    "twine",
    "wheel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["licence_normaliser", "licence_normaliser.*"]

[tool.setuptools.package-data]
"licence_normaliser" = ["data/**/*.json"]

[build-system]
requires = ["setuptools>=41.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
lint.select = [
    "B",
    "C4",
    "E",
    "F",
    "G",
    "I",
    "ISC",
    "INP",
    "N",
    "PERF",
    "Q",
    "SIM",
]
lint.ignore = [
    "G004",
    "ISC003",
]
fix = true
src = ["src/licence_normaliser"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]
target-version = "py310"
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["licence_normaliser"]

[tool.ruff.lint.per-file-ignores]
"conftest.py" = [
    "PERF203"
]

[tool.doc8]
ignore-path = [
    "docs/requirements.txt",
    "src/licence_normaliser.egg-info/SOURCES.txt",
]

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "-vvv",
    "-q",
    "--cov=licence_normaliser",
    "--ignore=.tox",
    "--cov-report=html",
    "--cov-report=term",
    "--cov-append",
    "--capture=no",
]
testpaths = [
    "src/licence_normaliser/tests",
    ".",
    "**/*.rst",
    "**/*.md",
]
pythonpath = ["src"]
norecursedirs = [".git", ".tox"]

[tool.coverage.run]
relative_files = true
omit = [".tox/*"]
source = ["licence_normaliser"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "@overload",
]

[tool.mypy]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.sphinx-source-tree]
ignore = [
    ".amazonq",
    "*.egg-info",
    "*.py,cover",
    "*.pyc",
    "*.pyo",
    ".DS_Store",
    ".coverage",
    ".coverage.*",
    ".git",
    ".hg",
    ".hypothesis",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pre-commit-config.yaml",
    ".pre-commit-hooks.yaml",
    ".pytest_cache",
    ".readthedocs.yaml",
    ".ruff_cache",
    ".secrets.baseline",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.rst",
    "LICENSE",
    "SECURITY.rst",
    "Thumbs.db",
    "__pycache__",
    "build",
    "codebin",
    "dist",
    "docs/Makefile",
    "docs/_build",
    "docs/_static",
    "docs/changelog.rst",
    "docs/code_of_conduct.rst",
    "docs/make.bat",
    "docs/requirements.txt",
    "docs/security.rst",
    "docs/source_tree.rst",
    "docs/source_tree_full.rst",
    "env",
    "htmlcov",
    "node_modules",
    "venv",
    "ARCHITECTURE.rst",
    ".coderabbit.yaml",
    ".coveralls",
    "docs/full-llms.rst",
    "docs/llms.rst",
    "docs/contributor_guidelines.rst",
    "docs/package.rst",
    "docs/documentation.rst",
    "docs/index.rst",
    "uv.lock",
    "codebin",
    "src/licence_normaliser/data/creativecommons",
    "src/licence_normaliser/data/opendefinition",
    "src/licence_normaliser/data/osi",
    "src/licence_normaliser/data/scancode_licensedb",
    "src/licence_normaliser/data/spdx",
]
order = [
    "README.rst",
    "CONTRIBUTING.rst",
    "AGENTS.md",
]

[[tool.sphinx-source-tree.files]]
output = "docs/full_llms.rst"
title = "Full project source-tree"

[[tool.sphinx-source-tree.files]]
output = "docs/llms.rst"
title = "Project source-tree"
ignore = [
    ".amazonq",
    "*.egg-info",
    "*.py,cover",
    "*.pyc",
    "*.pyo",
    ".DS_Store",
    ".coverage",
    ".coverage.*",
    ".git",
    ".hg",
    ".hypothesis",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pre-commit-config.yaml",
    ".pre-commit-hooks.yaml",
    ".pytest_cache",
    ".readthedocs.yaml",
    ".ruff_cache",
    ".secrets.baseline",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.rst",
    "LICENSE",
    "SECURITY.rst",
    "Thumbs.db",
    "__pycache__",
    "build",
    "codebin",
    "dist",
    "docs/Makefile",
    "docs/_build",
    "docs/_static",
    "docs/changelog.rst",
    "docs/code_of_conduct.rst",
    "docs/make.bat",
    "docs/requirements.txt",
    "docs/security.rst",
    "docs/source_tree.rst",
    "docs/source_tree_full.rst",
    "env",
    "htmlcov",
    "node_modules",
    "venv",
    "examples",
    "docs",
    "ARCHITECTURE.rst",
    ".coderabbit.yaml",
    ".coveralls",
    "docs/full-llms.rst",
    "docs/llms.rst",
    "docs/contributor_guidelines.rst",
    "docs/package.rst",
    "docs/documentation.rst",
    "docs/index.rst",
    "uv.lock",
    "src/licence_normaliser/data/creativecommons",
    "src/licence_normaliser/data/opendefinition",
    "src/licence_normaliser/data/osi",
    "src/licence_normaliser/data/scancode_licensedb",
    "src/licence_normaliser/data/spdx",
]
